cmake_minimum_required(VERSION 3.6)
project(asio)

add_definitions(-DASIO_STANDALONE -DASIO_SEPARATE_COMPILATION)
set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
set (CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(include/asio/detail)
include_directories(include/asio/detail/impl)
include_directories(include/asio/generic)
include_directories(include/asio/generic/detail)
include_directories(include/asio/impl)
include_directories(include/asio/ip)
include_directories(include/asio/ip/impl)
include_directories(include/asio/ip/detail)
include_directories(include/asio/local)
include_directories(include/asio/local/detail)
include_directories(include/asio/posix)
# include_directories(include/asio/ssl)
# include_directories(include/asio/ssl/detail)
# include_directories(include/asio/ssl/impl)
include_directories(include/asio/ts)
include_directories(include/asio/windows)
aux_source_directory(src         src)
aux_source_directory(include/asio/detail/impl         impl1)
aux_source_directory(include/asio/generic/detail/impl        impl2)
aux_source_directory(include/asio/impl        impl3)
aux_source_directory(include/asio/ip/impl        impl4)
aux_source_directory(include/asio/ip/detail/impl        impl5)
aux_source_directory(include/asio/local/detail/impl       impl6)
# aux_source_directory(include/asio/ssl/detail/impl       impl7)
# aux_source_directory(include/asio/ssl/impl       impl8)
# set(source ${src} ${impl1} ${impl2} ${impl3} ${impl4} ${impl5} ${impl6} ${impl7} ${impl8})
set(source ${src} ${impl1} ${impl2} ${impl3} ${impl4} ${impl5} ${impl6} )

add_library(asio STATIC ${source})
